# clear-msig-benchmark

./: .gitignore  .gitmodules  Makefile  index.html
bench/: Cargo.toml
bench/src/: helpers.rs  main.rs
clear-msig-anchor/: Anchor.toml  Cargo.toml
clear-msig-anchor/programs/clear-msig-anchor/: Cargo.toml
clear-msig-anchor/programs/clear-msig-anchor/src/: lib.rs  tests.rs
clear-msig-anchor/programs/clear-msig-anchor/src/instructions/: approve.rs  cancel.rs  cleanup_proposal.rs  create_wallet.rs  execute.rs  mod.rs  propose.rs
clear-msig-anchor/programs/clear-msig-anchor/src/state/: intent.rs  mod.rs  proposal.rs  wallet.rs
clear-msig-anchor/programs/clear-msig-anchor/src/utils/: definition.rs  message.rs  mod.rs
scripts/: detect-cargo-build-sbf.sh
